syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantResume {
	rpc ReadApplicantResume(IdRequestApplicantResume) returns  (ApplicantResumePayload);
	rpc CreateApplicantResume(ApplicantResumePayload) returns (google.protobuf.Empty);
	rpc UpdateApplicantResume(ApplicantResumePayload) returns (google.protobuf.Empty);
	rpc DeleteApplicantResume(ApplicantResumePayload) returns (google.protobuf.Empty);
}

message IdRequestApplicantResume {
	string Id = 1;
}

message ApplicantResumePayload{
	string Id = 1;
    string Applicant = 2;
    string Resume = 3; 
    google.protobuf.Timestamp LastUpdated = 4;

}
